--- a/docs/styles.css
+++ b/docs/styles.css
@@ -31,3 +31,15 @@ font-family: Arial;
   background-color: rgb(67, 77, 221);
   transition: 0.1s;
 }
+
+.gitbutton
+{
+  display: inline-block;
+  cursor: pointer;
+  border: none;
+  text-align: center;
+  font-size: 15px;
+  position: relative;
+  left: 20px;
+  bottom:250px;
+}
