--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,7 +1,61 @@
 body {
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   text-align: center;
 }
 
+article {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  text-align: center;
+}
+
+.projects {
+  margin-top: 15px
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 2fr);
+  gap: 25px;
+  padding: 1em;
+  justify-items: center;
+}
+
+.blockie {
+  grid-column: 2/3;
+  grid-row: 2 / 3;
+  justify-self: center;
+  margin-top: 200px;
+}
+
+.links {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  text-align: center;
+}
 .yt-video {
-  padding-top: 15px;
+  text-align: center;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  justify-self: center;
+}
+
+
+
+.card1 {
+  grid-column: 1/2;
+  grid-row: 2;
+}
+
+.card2 {
+  grid-column: 2 / 3;
+  grid-row: 2;
+  
+}
+
+.card3 {
+  grid-column: 3;
+  grid-row: 2 / 3;
 }
